@startuml

class ApplicationModel {
  name: String
  version: ApiVersion
  description: String
  appRoute: PathMatcher[Unit]
  addResourceModel(routeMapping: RouteMapping[_]): Option[Type]
  linkFor(clsName: String): Option[String]
  controllerModelFor(cls: Class[_ <: Resource[_]])
  entityModelFor(ssr: Resource[_]): Option[EntityModel]
}

class ResourceModel {
  routeMapping: RouteMapping[_]
  entityClass: Type
  linkModel: LinkModel2
  linkFor(clsName: String): Option[String]
  linkModels: List[LinkModel2] = List()
}

class EntityModel {
    entityClass: Type
}

class LinkModel {
}

class RouteMapping {
  path: String, resourceClass: Class[_ <: Resource[T]]
  getEntityType(): Type
}

ApplicationModel o-- "n" ResourceModel
ApplicationModel .. RouteMapping
ResourceModel -- LinkModel
ResourceModel -- "1" EntityModel


@enduml